# z-switch

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/: DEEPLINK.md  TODO.md  USAGE.md  deeplink.html
docs/sponsors/: README.md
src/: App.css  App.tsx  CcswitchImportModal.tsx  ConfirmDialog.tsx  DeepLinkImportDialog.tsx  Icons.tsx  ImportExportModal.tsx  ModelPicker.tsx  ProviderModal.tsx  SettingsModal.tsx  StreamTestModal.tsx  Titlebar.tsx  Toasts.tsx  api.ts  providerFactory.ts  theme.ts  types.ts  updater.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ccswitch.rs  claude_desktop.rs  claude_ext.rs  config.rs  connectivity.rs  lib.rs  live.rs  main.rs  model_fetch.rs  official.rs  original.rs  proxy.rs  proxy_log.rs  repair.rs  speed.rs  store.rs  stream_test.rs  tray.rs
